# health-simplified-cli

./: README.md  alice_entries.csv  eve_entries.csv  health.db  pyproject.toml
app/: model.py  models.py
cli/: analytics_cli.py  entry_cli.py  goal_cli.py  main.py  meal_cli.py  user_cli.py
database/: setup.py
health_simplified_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
models/: __init__.py  entry.py  goal.py  user.py
services/: entry_service.py  goal_service.py  meal_service.py  user_service.py
tests/: conftest.py  test_analytics.py  test_entry.py  test_goal.py  test_meal.py  test_user.py
